<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">My World</string>
	<string name="clientModelClassName">com.gallantrealm.myworld.android.AndroidClientModel</string>
	<string name="mainMenuClassName">com.gallantrealm.myworld.android.ConnectToWorldActivity</string>
	<string name="selectAvatarClassName">com.gallantrealm.myworld.android.SelectAvatarActivity</string>
	<string name="selectWorldClassName">com.gallantrealm.myworld.android.SelectWorldActivity</string>
	<string name="startWorldClassName">com.gallantrealm.myworld.android.StartWorldActivity</string>
	<string name="helpClassName">com.gallantrealm.myworld.android.HelpActivity</string>
	<string name="settingsClassName">com.gallantrealm.myworld.android.SettingsActivity</string>
	<string name="defaultWorldName">com.gallantrealm.myworld.android.DemoWorld</string>
	<string name="defaultWorldClassName"></string>
	<string name="defaultAvatarName">user1</string>
	<string name="supportsScreenController">true</string>
	<string name="accelerometerHint">Tilt left/right to turn, forward/back to move</string>
	<string name="usedSounds"></string>
	<string name="swarmAppId">0</string>
	<string name="swarmAppKey">0</string>
	<string name="fullVersion">false</string>
	<string name="navatars">6</string>
	<string name="avatar1name">Avatar1</string>
	<string name="avatar2name">Avatar2</string>
	<string name="avatar3name">Avatar3</string>
	<string name="avatar4name">Avatar4</string>
	<string name="avatar5name">Avatar5</string>
	<string name="avatar6name">Avatar6</string>
	<string name="avatar1description">Description of avatar 1.</string>
	<string name="avatar2description">Description of avatar 2.</string>
	<string name="avatar3description">Description of avatar 3.</string>
	<string name="avatar4description">Description of avatar 4.</string>
	<string name="avatar5description">Description of avatar 5.</string>
	<string name="avatar6description">Description of avatar 6.</string>
	<string name="nworlds">24</string>
	<string name="world1Name">World 1</string>
	<string name="world2Name">World 2</string>
	<string name="world3Name">World 3</string>
	<string name="world4Name">World 4</string>
	<string name="world5Name">World 5</string>
	<string name="world6Name">World 6</string>
	<string name="world7Name">World 7</string>
	<string name="world8Name">World 8</string>
	<string name="world9Name">World 9</string>
	<string name="world10Name">World 10</string>
	<string name="world11Name">World 11</string>
	<string name="world12Name">World 12</string>
	<string name="world13Name">World 13</string>
	<string name="world14Name">World 14</string>
	<string name="world15Name">World 15</string>
	<string name="world16Name">World 16</string>
	<string name="world17Name">World 17</string>
	<string name="world18Name">World 18</string>
	<string name="world19Name">World 19</string>
	<string name="world20Name">World 20</string>
	<string name="world21Name">World 21</string>
	<string name="world22Name">World 22</string>
	<string name="world23Name">World 23</string>
	<string name="world24Name">World 24</string>
	<string name="world1ClassName">com.gallantrealm.myworld.android.World1</string>
	<string name="world2ClassName">com.gallantrealm.myworld.android.World2</string>
	<string name="world3ClassName">com.gallantrealm.myworld.android.World3</string>
	<string name="world4ClassName">com.gallantrealm.myworld.android.World4</string>
	<string name="world5ClassName">com.gallantrealm.myworld.android.World5</string>
	<string name="world6ClassName">com.gallantrealm.myworld.android.World6</string>
	<string name="world7ClassName">com.gallantrealm.myworld.android.World7</string>
	<string name="world8ClassName">com.gallantrealm.myworld.android.World8</string>
	<string name="world9ClassName">com.gallantrealm.myworld.android.World9</string>
	<string name="world10ClassName">com.gallantrealm.myworld.android.World10</string>
	<string name="world11ClassName">com.gallantrealm.myworld.android.World11</string>
	<string name="world12ClassName">com.gallantrealm.myworld.android.World12</string>
	<string name="world13ClassName">com.gallantrealm.myworld.android.World13</string>
	<string name="world14ClassName">com.gallantrealm.myworld.android.World14</string>
	<string name="world15ClassName">com.gallantrealm.myworld.android.World15</string>
	<string name="world16ClassName">com.gallantrealm.myworld.android.World16</string>
	<string name="world17ClassName">com.gallantrealm.myworld.android.World17</string>
	<string name="world18ClassName">com.gallantrealm.myworld.android.World18</string>
	<string name="world19ClassName">com.gallantrealm.myworld.android.World19</string>
	<string name="world20ClassName">com.gallantrealm.myworld.android.World20</string>
	<string name="world21ClassName">com.gallantrealm.myworld.android.World21</string>
	<string name="world22ClassName">com.gallantrealm.myworld.android.World22</string>
	<string name="world23ClassName">com.gallantrealm.myworld.android.World23</string>
	<string name="world24ClassName">com.gallantrealm.myworld.android.World24</string>
	<string name="world1description">Description of world 1.</string>
	<string name="world2description">Description of world 2.</string>
	<string name="world3description">Description of world 3.</string>
	<string name="world4description">Description of world 4.</string>
	<string name="world5description">Description of world 5.</string>
	<string name="world6description">Description of world 6.</string>
	<string name="world7description">Description of world 7.</string>
	<string name="world8description">Description of world 8.</string>
	<string name="world9description">Description of world 9.</string>
	<string name="world10description">Description of world 10.</string>
	<string name="world11description">Description of world 11.</string>
	<string name="world12description">Description of world 12.</string>
	<string name="world13description">Description of world 13.</string>
	<string name="world14description">Description of world 14.</string>
	<string name="world15description">Description of world 15.</string>
	<string name="world16description">Description of world 16.</string>
	<string name="world17description">Description of world 17.</string>
	<string name="world18description">Description of world 18.</string>
	<string name="world19description">Description of world 19.</string>
	<string name="world20description">Description of world 20.</string>
	<string name="world21description">Description of world 21.</string>
	<string name="world22description">Description of world 22.</string>
	<string name="world23description">Description of world 23.</string>
	<string name="world24description">Description of world 24.</string>
	<string name="world1customizable">false</string>
	<string name="world2customizable">false</string>
	<string name="world3customizable">false</string>
	<string name="world4customizable">false</string>
	<string name="world5customizable">false</string>
	<string name="world6customizable">false</string>
	<string name="world7customizable">false</string>
	<string name="world8customizable">false</string>
	<string name="world9customizable">false</string>
	<string name="world10customizable">false</string>
	<string name="world11customizable">false</string>
	<string name="world12customizable">false</string>
	<string name="world13customizable">false</string>
	<string name="world14customizable">false</string>
	<string name="world15customizable">false</string>
	<string name="world16customizable">false</string>
	<string name="world17customizable">false</string>
	<string name="world18customizable">false</string>
	<string name="world19customizable">false</string>
	<string name="world20customizable">false</string>
	<string name="world21customizable">false</string>
	<string name="world22customizable">false</string>
	<string name="world23customizable">false</string>
	<string name="world24customizable">false</string>
	<string name="chooseAvatarButton">Choose Avatar</string>
	<string name="chooseWorldButton">Choose World</string>
	<string name="selectWorldPrompt">Select a world:</string>
	<string name="selectAvatarPrompt">Select an avatar:</string>
	<string name="levelLabel">Level</string>
	<string name="scoreLabel">Score</string>
	<string name="buyMessage">Buy and remove ads?</string>
	<string name="admobid"></string>
	<string name="amazonappkey"></string>
	<!-- The following are reserved skus defined by Market for testing. -->
	<string name="android_test_canceled">android.test.canceled</string>
	<string name="android_test_purchased">android.test.purchased</string>
	<string name="android_test_item_unavailable">android.test.item unavailable</string>
	<string name="android_test_refunded">android.test.refunded</string>
	<string name="supports_new_graphics">true</string>
	<string name="showPopupAds">false</string>
	<string name="showBannerAds">false</string>
	<string name="googleappkey"></string>
    <string name="standard_list">Standard</string>
    <string name="empty_list">Empty</string>
</resources>