<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mainLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="fill_parent"
	android:background="@raw/theme_background" android:baselineAligned="false"
	android:orientation="vertical" android:paddingBottom="10px"
	android:paddingLeft="10px" android:paddingRight="10px"
	android:paddingTop="10px">
	<TextView android:id="@+id/titleText" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingLeft="5dp"
		android:shadowColor="#444444" android:shadowDx="1" android:shadowDy="1"
		android:shadowRadius="2" android:text="@string/selectWorldPrompt"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textSize="25sp" android:textStyle="bold" />
	<ScrollView android:id="@+id/scrollView1"
		android:layout_width="match_parent" android:layout_height="fill_parent"
		android:layout_weight="5" android:tag="Timed Racing">
		<TableLayout android:id="@+id/tableLayout1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:isScrollContainer="true" android:scrollbars="vertical">
			<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<LinearLayout android:id="@+id/world1Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView02"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world1Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/goggleDog"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world1" />
					<TextView android:id="@+id/score1" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="@string/scoreLabel" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world2Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp"
					android:visibility="visible">
					<TextView android:id="@+id/TextView04"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world2Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView01"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world2" />
					<TextView android:id="@+id/score2" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world3Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" android:layout_weight="1"
					android:background="#80404040" android:orientation="vertical"
					android:paddingTop="5dp" android:visibility="visible">
					<TextView android:id="@+id/TextView06"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world3Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView02"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world3" />
					<TextView android:id="@+id/score3" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:visibility="visible">
				<LinearLayout android:id="@+id/world4Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView07"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world4Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView03"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world4" />
					<TextView android:id="@+id/score4" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world5Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" android:layout_weight="1"
					android:background="#80404040" android:orientation="vertical"
					android:paddingTop="5dp">
					<TextView android:id="@+id/TextView09"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world5Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView04"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world5" />
					<TextView android:id="@+id/score5" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world6Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView15"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world6Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView07"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:adjustViewBounds="true"
						android:src="@raw/world6" />
					<TextView android:id="@+id/score6" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginBottom="5dp"
				android:clickable="true" android:visibility="visible">
				<LinearLayout android:id="@+id/world7Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView13"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world7Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView06"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world7" />
					<TextView android:id="@+id/score7" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world8Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView12"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world8Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView05"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world8" />
					<TextView android:id="@+id/score8" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world9Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/countText"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world9Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView09"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world9" />
					<TextView android:id="@+id/score9" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginBottom="5dp"
				android:clickable="true" android:visibility="visible">
				<LinearLayout android:id="@+id/world10Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView08"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world10Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView10"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world10" />
					<TextView android:id="@+id/score10" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world11Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView05"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world11Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView08"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world11" />
					<TextView android:id="@+id/score11" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
				<LinearLayout android:id="@+id/world12Select"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
					android:layout_weight="1" android:background="#80404040"
					android:orientation="vertical" android:paddingTop="5dp">
					<TextView android:id="@+id/TextView14"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:text="@string/world12Name"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
					<ImageView android:id="@+id/ImageView11"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="center" android:src="@raw/world12" />
					<TextView android:id="@+id/score12" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center"
						android:text="In Full Version" android:textAppearance="?android:attr/textAppearanceLarge"
						android:textSize="16dp" />
				</LinearLayout>
			</TableRow>
		</TableLayout>
	</ScrollView>
	<FrameLayout android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center">
			<Button android:id="@+id/okButton" android:layout_width="120dp"
				android:layout_height="60dp" android:layout_gravity="center"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
				android:background="@drawable/theme_button" android:paddingLeft="0dp"
				android:paddingRight="0dp" android:shadowColor="#888888"
				android:shadowDx="-1" android:shadowDy="-1" android:shadowRadius="1"
				android:text="OK" android:textSize="25sp" android:textStyle="bold" />
			<Button android:id="@+id/resetScoreButton"
				android:layout_width="120dp" android:layout_height="60dp"
				android:layout_gravity="center" android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp" android:background="@drawable/theme_button"
				android:paddingLeft="0dp" android:paddingRight="0dp"
				android:shadowColor="#888888" android:shadowDx="-1"
				android:shadowDy="-1" android:shadowRadius="1" android:text="Reset Level"
				android:textSize="25sp" android:textStyle="bold" />
		</LinearLayout>
	</FrameLayout>
</LinearLayout>