<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@raw/theme_background"
	android:clipToPadding="false"
	android:paddingBottom="15dp"
	android:paddingLeft="15dp"
	android:paddingRight="15dp" >
	<TextView
		android:id="@+id/titleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:gravity="center_horizontal"
		android:paddingTop="5dp"
		android:shadowColor="#444444"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="2"
		android:text="@string/app_name"
		android:textColor="#ffffff"
		android:textSize="70dp"
		android:textStyle="italic"
		android:typeface="serif" />
	<Button
		android:id="@+id/chooseAvatarButton"
		android:layout_width="150dp"
		android:layout_height="100dp"
		android:layout_alignParentLeft="true"
		android:layout_centerVertical="true"
		android:background="@drawable/theme_button"
		android:shadowColor="#444444"
		android:shadowDx="-2"
		android:shadowDy="-2"
		android:shadowRadius="1"
		android:text="@string/chooseAvatarButton"
		android:textSize="25sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/chooseWorldButton"
		android:layout_width="150dp"
		android:layout_height="100dp"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:background="@drawable/theme_button"
		android:shadowColor="#444444"
		android:shadowDx="-2"
		android:shadowDy="-2"
		android:shadowRadius="1"
		android:text="@string/chooseWorldButton"
		android:textSize="25sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/playButton"
		android:layout_width="150dp"
		android:layout_height="100dp"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:background="@drawable/theme_button"
		android:shadowColor="#444444"
		android:shadowDx="-2"
		android:shadowDy="-2"
		android:shadowRadius="1"
		android:text="Play!"
		android:textSize="25sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/quitButton"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:background="@drawable/theme_button"
		android:shadowColor="#444444"
		android:shadowDx="-2"
		android:shadowDy="-2"
		android:shadowRadius="1"
		android:text="Quit"
		android:textSize="20sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/settingsButton"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="16dp"
		android:background="@drawable/theme_button"
		android:shadowColor="#888888"
		android:shadowDx="-1"
		android:shadowDy="-1"
		android:shadowRadius="1"
		android:text="Settings"
		android:textSize="20sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/helpButton"
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="14dp"
		android:background="@drawable/theme_button"
		android:shadowColor="#888888"
		android:shadowDx="-1"
		android:shadowDy="-1"
		android:shadowRadius="1"
		android:text="Help"
		android:textSize="20sp"
		android:textStyle="bold" />
</RelativeLayout>